flex fix (align items)

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -81,7 +81,7 @@
         flex-flow: row wrap;
         width: 90%;
         align-content: center;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
         justify-items: center;
         margin-right: auto;
